Avanzan Con Enter

--- a/src/Interfaz/Principal.form
+++ b/src/Interfaz/Principal.form
@@ -67,6 +67,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtInicial">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ActionListener"/>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtInicialKeyTyped"/>
           </Events>
           <Constraints>
@@ -90,6 +91,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtFinal">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ActionListener"/>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtFinalKeyTyped"/>
           </Events>
           <Constraints>
